--- a/HW4.html
+++ b/HW4.html
@@ -10,24 +10,24 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <!-- added css file -->
     <link rel="stylesheet" href="style.css">
-    <title>HW3</title>
+    <title>HW4</title>
     <!-- added jquery file in project -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/jalali-moment/dist/jalali-moment.browser.js"></script>
 </head>
 
 <body>
     <div class="row m-0 justify-content-center">
         <div class="col-12 row justify-content-center bg-warning">
-            <h1>Task HW3</h1>
+            <h1>Task Home Work 4</h1>
         </div>
         <div class="col-11 p-4">
             <!-- quiz one -->
-            <h5>1- A function to delete an item by index</h5>
-            <p>array list: [1,2,3,4,5,6]</p>
-            <input style="width: 20%;" type="number" name="array" id="itemDelete"
-                placeholder="please write length number item delete">
-            <button onclick="funcDelete()">click me</button>
-            <p class="mt-3" id="textArray">New Array list :</p>
+            <h5>1- A function to convert Gregorian date into jalali date (YYYY/MM/DD) </h5>
+            <input class="w-25" type="text" id="test" placeholder="please write date Gregorian:1997/2/2">
+            <input type="button" value="click convert to jalali date" onclick="convertDate()">
+            <p id="persianDate" class="mt-3">Persian Date : </p>
+
             <hr>
             <!-- quiz Two -->
             <h5>2- A function to combine two or more arrays] and sort the final array</h5>
