--- a/HW4.html
+++ b/HW4.html
@@ -37,29 +37,25 @@
             <button onclick="showText()">click me for Conver</button>
             <p class="mt-3" style="display: none;" id="textDate"></p>
             <hr>
-
-
-
-
-
-
-
-
-
-
             <!-- quiz three -->
-            <h5>3- Flat an Array of Arrays</h5>
+            <h5>3- Extend above function to get an array (unlimited) of dates and return the diff except gaps between in hours and minutes</h5>
             <p>[1,2,[9,4,[4,7],5],3,1]</p>
             <button onclick="flatArray()">click Flat Array</button>
             <p class="mt-3" id="arrayFlaten">Array Flat :</p>
             <hr>
             <!-- quiz four -->
-            <h5>4- find item in an Array </h5>
-            <p>Array = [20, 18, 15, 10, 9]</p>
-            <input style="width: 20%;" type="number" name="array" id="inputIndex" placeholder="please write item">
-            <button onclick="funcFindIndex()">click index item</button>
-            <p id="textIndex" class="mt-3">Index item = </p>
+            <h5>4- a function that convert time into another time zone (by getting date object) </h5>
+            <p id="dateAsia"></p>
+            <button id="convertTime" onclick="convertDate()">Convert USA time</button>
+            <p class="mt-3" id="dateUSA">USA time: </p>
             <hr>
+
+
+
+
+
+
+
             <!-- quiz five -->
             <h5>5- Replace an item in Array </h5>
             <p>Array = [a,b,c,d,e,f,g]</p>
