--- a/HW4.html
+++ b/HW4.html
@@ -25,8 +25,8 @@
             <!-- quiz one -->
             <h5>1- A function to convert Gregorian date into jalali date (YYYY/MM/DD) </h5>
             <p>please write date Gregorian</p>
-            <input class="w-25" type="text" id="date" placeholder="Example:1997/2/2">
-            <input type="button" value="click convert to jalali date" onclick="convertDate()">
+            <input class="w-25" type="text" id="date" placeholder="Example:1997/2/2" value="1994/9/03">
+            <input type="button" value="click convert to jalali date" onclick="convertDatePersian()">
             <p id="persianDate" class="mt-3">Persian Date : </p>
             <hr>
             <!-- quiz Two -->
@@ -39,9 +39,7 @@
             <hr>
             <!-- quiz three -->
             <h5>3- Extend above function to get an array (unlimited) of dates and return the diff except gaps between in hours and minutes</h5>
-            <p>[1,2,[9,4,[4,7],5],3,1]</p>
-            <button onclick="flatArray()">click Flat Array</button>
-            <p class="mt-3" id="arrayFlaten">Array Flat :</p>
+        
             <hr>
             <!-- quiz four -->
             <h5>4- a function that convert time into another time zone (by getting date object) </h5>
@@ -49,28 +47,18 @@
             <button id="convertTime" onclick="convertDate()">Convert USA time</button>
             <p class="mt-3" id="dateUSA">USA time: </p>
             <hr>
-
-
-
-
-
-
-
             <!-- quiz five -->
-            <h5>5- Replace an item in Array </h5>
-            <p>Array = [a,b,c,d,e,f,g]</p>
-            <p>change item : a</p>
-            <p>new item : s</p>
-            <button id="btnReplace" onclick="replaceItem()">click change item</button>
-            <p class="mt-3" id="newArray">new Array = </p>
+            <h5>5- Function to get a Date object,convert in to jalali Date,and return persian output</h5>
+            <input class="w-25" id="gregorianInput" placeHolder="Example:1989/1/24" value="1994/9/03">
+            <button id="convertToJalali">convert</button>
+            <p class="mt-3" id="jalaliOutput">تاریخ :</p>
             <hr>
             <!-- quiz six -->
-            <h5>6- A function to extract numbers from a string </h5>
-            <input style="width: 20%;" type="text" name="array" id="stringItem"
-                placeholder="please write text string and number">
-            <button onclick="numbersInString(document.getElementById('stringItem').value)">click convert string to
-                number</button>
-            <p class="mt-3" id="textNumber">Number = </p>
+            <h5>6- write a javascript program which returns a subset of a string </h5>
+            <input style="width: 20%;" type="text" name="array" id="subsetString"
+                placeholder="please write text">
+            <button onclick="subsetString(document.getElementById('subsetString').value)">click subset string</button>
+            <p class="mt-3" id="textSubset">Text = </p>
             <hr>
             <!-- quiz seven -->
             <h5>7- remove duplicate items of an Array </h5>
