--- a/HW4.html
+++ b/HW4.html
@@ -60,14 +60,12 @@
             <button onclick="subsetString(document.getElementById('subsetString').value)">click subset string</button>
             <p class="mt-3" id="textSubset">Text = </p>
             <hr>
+
             <!-- quiz seven -->
-            <h5>7- remove duplicate items of an Array </h5>
-            <p>Array = [1,1,2,3,4,1,3,5]</p>
-            <button onclick="uniqueArray()">unique Array</button>
-            <p class="mt-3" id="textUniqueArray">unique Array = </p>
-
-
-
+            <h5>7- write a javascript function to convert an object into a list of key value pairs</h5>
+            <p>{country: "Iran",capital: "Tehran",population: "18M"}</p>
+            <button id="btnListArray">Convert list Array</button>
+            <p class="mt-3" id="textListArray">List Array =</p>
         </div>
     </div>
 </body>
