finished quiz eight

--- a/HW4.html
+++ b/HW4.html
@@ -66,6 +66,13 @@
             <p>{country: "Iran",capital: "Tehran",population: "18M"}</p>
             <button id="btnListArray">Convert list Array</button>
             <p class="mt-3" id="textListArray">List Array =</p>
+            <hr>
+
+            <!-- quiz eight -->
+            <h5>8- write a javascript program to sort an array of javascript objects by numeric property(can detect the numerical property)</h5>
+            <p id="arrayList"></p>
+            <button onclick="sortArray()" id="convertArraySort">Sort Array</button>
+            <p class="mt-3" id="arraySort"></p>
         </div>
     </div>
 </body>
