finished quiz ten

--- a/HW4.html
+++ b/HW4.html
@@ -38,8 +38,9 @@
             <p class="mt-3" style="display: none;" id="textDate"></p>
             <hr>
             <!-- quiz three -->
-            <h5>3- Extend above function to get an array (unlimited) of dates and return the diff except gaps between in hours and minutes</h5>
-        
+            <h5>3- Extend above function to get an array (unlimited) of dates and return the diff except gaps between in
+                hours and minutes</h5>
+
             <hr>
             <!-- quiz four -->
             <h5>4- a function that convert time into another time zone (by getting date object) </h5>
@@ -55,8 +56,7 @@
             <hr>
             <!-- quiz six -->
             <h5>6- write a javascript program which returns a subset of a string </h5>
-            <input style="width: 20%;" type="text" name="array" id="subsetString"
-                placeholder="please write text">
+            <input style="width: 20%;" type="text" name="array" id="subsetString" placeholder="please write text">
             <button onclick="subsetString(document.getElementById('subsetString').value)">click subset string</button>
             <p class="mt-3" id="textSubset">Text = </p>
             <hr>
@@ -69,17 +69,35 @@
             <hr>
 
             <!-- quiz eight -->
-            <h5>8- write a javascript program to sort an array of javascript objects by numeric property(can detect the numerical property)</h5>
+            <h5>8- write a javascript program to sort an array of javascript objects by numeric property(can detect the
+                numerical property)</h5>
             <p id="arrayList"></p>
             <button onclick="sortArray()" id="convertArraySort">Sort Array</button>
-            <p class="mt-3" id="arraySort"></p>
+            <p class="mt-3" id="arraySort">Array Sort:</p>
+
+            <!-- quiz nine -->
+            <hr>
+            <h5>9- write a javaScript program to Map a range a specific Range </h5>
+            <!-- quiz ten -->
+            <hr>
+            <h5>10- write a javascript function to add specific minutes to a date object</h5>
+            <p id="dateTehran"></p>
+            <button onclick="changeTime()">change Time</button>
+            <p class="mt-3" id="newTime">New Time :</p>
+
+
+
+
+
+
+
         </div>
     </div>
 </body>
 
 <!-- added js file -->
 <script src="script.js">
-    
+
 </script>
 
 </html>
