--- a/HW4.html
+++ b/HW4.html
@@ -27,45 +27,52 @@
             <p>please write date Gregorian</p>
             <input class="w-25" type="text" id="date" placeholder="Example:1997/2/2" value="1994/9/03">
             <input type="button" value="click convert to jalali date" onclick="convertDatePersian()">
-            <p id="persianDate" class="mt-3">Persian Date : </p>
+            <p id="persianDate" class="text-success mt-3">Persian Date : </p>
             <hr>
+
             <!-- quiz Two -->
             <h5>2- A function to get Diff between two dates object</h5>
             <p>For example:</p>
-            <p>One Date : 2019/5/28 12:02:02</p>
-            <p>Two Date : 2020/7/29 13:03:03</p>
-            <button onclick="showText()">click me for Conver</button>
-            <p class="mt-3" style="display: none;" id="textDate"></p>
+            <p id="oneDate"></p>
+            <p id="twoDate"></p>
+            <button onclick="diffTime()">click me for Conver</button>
+            <p class="mt-3 text-success" id="textDate">Diff between two dates = </p>
             <hr>
+
             <!-- quiz three -->
             <h5>3- Extend above function to get an array (unlimited) of dates and return the diff except gaps between in
                 hours and minutes</h5>
-
+            <P id="demo"></P>
+            <button onclick="differenceTime()">Show Time difference</button>
+            <P class="mt-3 text-success" id="demo2">Time difference = </P>
             <hr>
+
             <!-- quiz four -->
             <h5>4- a function that convert time into another time zone (by getting date object) </h5>
             <p id="dateAsia"></p>
             <button id="convertTime" onclick="convertDate()">Convert USA time</button>
-            <p class="mt-3" id="dateUSA">USA time: </p>
+            <p class="mt-3 text-success" id="dateUSA">USA time: </p>
             <hr>
+
             <!-- quiz five -->
             <h5>5- Function to get a Date object,convert in to jalali Date,and return persian output</h5>
             <input class="w-25" id="gregorianInput" placeHolder="Example:1989/1/24" value="1994/9/03">
             <button id="convertToJalali">convert</button>
-            <p class="mt-3" id="jalaliOutput">تاریخ :</p>
+            <p class="mt-3 text-success" id="jalaliOutput">تاریخ :</p>
             <hr>
+
             <!-- quiz six -->
             <h5>6- write a javascript program which returns a subset of a string </h5>
-            <input style="width: 20%;" type="text" name="array" id="subsetString" placeholder="please write text">
+            <input class="w-25" type="text" name="array" id="subsetString" placeholder="please write text">
             <button onclick="subsetString(document.getElementById('subsetString').value)">click subset string</button>
-            <p class="mt-3" id="textSubset">Text = </p>
+            <p class="mt-3 text-success" id="textSubset">Text = </p>
             <hr>
 
             <!-- quiz seven -->
             <h5>7- write a javascript function to convert an object into a list of key value pairs</h5>
             <p>{country: "Iran",capital: "Tehran",population: "18M"}</p>
             <button id="btnListArray">Convert list Array</button>
-            <p class="mt-3" id="textListArray">List Array =</p>
+            <p class="mt-3 text-success" id="textListArray">List Array =</p>
             <hr>
 
             <!-- quiz eight -->
@@ -73,17 +80,22 @@
                 numerical property)</h5>
             <p id="arrayList"></p>
             <button onclick="sortArray()" id="convertArraySort">Sort Array</button>
-            <p class="mt-3" id="arraySort">Array Sort:</p>
+            <p class="mt-3 text-success" id="arraySort">Array Sort:</p>
 
             <!-- quiz nine -->
             <hr>
             <h5>9- write a javaScript program to Map a range a specific Range </h5>
+            <p>Range (1~100)</p>
+            <input class="w-25" placeholder="please write number" type="number" name="number" id="numberRange">
+            <button onclick="RangeNumber()">click range (1~5)</button>
+            <p class="mt-3 text-success" id="newNumber">Number =</p>
+
             <!-- quiz ten -->
             <hr>
             <h5>10- write a javascript function to add specific minutes to a date object</h5>
             <p id="dateTehran"></p>
             <button onclick="changeTime()">change Time</button>
-            <p class="mt-3" id="newTime">New Time :</p>
+            <p class="mt-3 text-success" id="newTime">New Time :</p>
 
 
 
